compilateurDeca/src/test/deca/context/invalid/sans_objet/controle/condition_avec_affectation.ass
	TSTO #1
	BOV pile_pleine
	ADDSP #1
; start main program
; Main program
; Beginning of main declarations:
; Beginning of main instructions:
	LOAD #1, R2
	STORE R2, 1(GB)
	CMP #0, R2
	BEQ else_0
	BRA end_if_1
else_0:
end_if_1:
	HALT
division_zero:
	WSTR "Erreur: division par zéro"
	WNL
	ERROR
debordement_flottant:
	WSTR "Erreur: Debordement flottant"
	WNL
	ERROR
pile_pleine:
	WSTR "Erreur: Debordement de la pile"
	WNL
	ERROR
; end main program
